[gd_scene load_steps=6 format=3 uid="uid://qu06wlu637ji"]

[ext_resource type="Script" path="res://scenes/scripts/game_start_321.gd" id="1_7m0lf"]
[ext_resource type="Theme" uid="uid://dti72e04ltog4" path="res://game.theme" id="1_nh8ac"]

[sub_resource type="Animation" id="Animation_bq4pl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_g4lqp"]
resource_name = "zoom_out"
length = 0.97
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.81, 0.81)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y2bv6"]
_data = {
"RESET": SubResource("Animation_bq4pl"),
"zoom_out": SubResource("Animation_g4lqp")
}

[node name="GameStartTimer" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.3, 1.3)
pivot_offset = Vector2(572, 367)
script = ExtResource("1_7m0lf")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.0627451, 0.0627451, 0.25098, 0.12549)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -98.0
offset_right = 64.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(67, 34)
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("1_nh8ac")
theme_override_font_sizes/font_size = 51
text = "0"
horizontal_alignment = 1

[node name="GameStartTimer" type="Timer" parent="."]
wait_time = 3.99
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Label")
libraries = {
"": SubResource("AnimationLibrary_y2bv6")
}

[node name="SecondTimer" type="Timer" parent="."]

[connection signal="timeout" from="SecondTimer" to="." method="_on_second_timer_timeout"]
